--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "multiwebsite",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
-    "copy-dir": "^0.3.0",
-    "debug": "~2.6.9",
-    "dotenv": "^6.0.0",
-    "express": "~4.15.5",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
-    "hbs": "~4.0.1",
-    "morgan": "~1.9.0",
-    "mysql2": "^1.5.3",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "sequelize": "^4.37.10",
-    "serve-favicon": "~2.4.5",
-    "vhost": "^3.0.2"
-  }
+    "name": "multiwebsite",
+    "version": "0.0.0",
+    "private": true,
+    "main": "app.js",
+    "scripts": {
+        "start": "node app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "bcrypt-nodejs": "0.0.3",
+        "body-parser": "~1.18.2",
+        "cookie-parser": "~1.4.3",
+        "copy-dir": "^0.3.0",
+        "debug": "~2.6.9",
+        "dotenv": "^6.0.0",
+        "express": "~4.15.5",
+        "express-handlebars": "^3.0.0",
+        "express-session": "^1.15.6",
+        "hbs": "~4.0.1",
+        "morgan": "~1.9.0",
+        "mysql2": "^1.5.3",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
+        "sequelize": "^4.37.10",
+        "serve-favicon": "~2.4.5",
+        "vhost": "^3.0.2"
+    }
 }
