change db cred again

--- a/config/config.json
+++ b/config/config.json
@@ -34,7 +34,7 @@
   
          "password": "7c86ee45",
   
-         "database": "sheroku_e142708bbcf634campledb",
+         "database": "heroku_e142708bbcf634c",
   
          "host": "us-cdbr-iron-east-04.cleardb.net",
   
